change in route transaction, notifiersetting update read, json of swagger\read
